# omneva

./: .gitignore  README.md  build.py  main.py  pyproject.toml  requirements.txt
src/: app.py  main_window.py
src/core/: downloader.py  ffmpeg_service.py  ffprobe_service.py  history_service.py  playlist_model.py  queue_manager.py  storage.py  utils.py  vlc_engine.py
src/styles/: dark_theme.qss  light_theme.qss
src/ui/: converter_panel.py  download_dialog.py  library_panel.py  menus.py  player_widget.py  queue_panel.py  settings_dialog.py  titlebar.py  tools_dialogs.py  transcoder_panel.py
src/ui/dialogs/: audio_widgets.py  equalizer_widget.py  sync_widget.py  video_advanced_widget.py  video_crop_widget.py  video_essential_widget.py  video_overlay_widget.py
src/ui/tabs/: audio_tab.py  chapters_tab.py  dimensions_tab.py  filters_tab.py  subtitles_tab.py  summary_tab.py  video_tab.py
tmp/: test_shortcuts_functional.py
